Update on Admin Transaction Viewer & added basic Footer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=tokobuku
 # Database config
 spring.datasource.url=jdbc:mysql://localhost:3306/tokobuku
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 # JPA Hibernate
 spring.jpa.hibernate.ddl-auto=update
