--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.cache=false
 spring.web.resources.add-mappings=true
 
+# Enable SQL initialization
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
